tests/lean/doSeqRightIssue.lean.expected.out
doSeqRightIssue.lean:5:23-5:24: error: unknown universe level 'v'
doSeqRightIssue.lean:7:0-8:40: warning: declaration uses 'sorry'
doSeqRightIssue.lean:6:8-6:10: warning: declaration uses 'sorry'
